修改消息通知功能，解决重复启动的问题

--- a/socks5-client/src/main/resources/view/PaneLayout.fxml
+++ b/socks5-client/src/main/resources/view/PaneLayout.fxml
@@ -43,17 +43,11 @@
                      </font>
                   </Label>
                   <TextField fx:id="localPort" prefHeight="35.0" prefWidth="245.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" onAction="#onStop" prefHeight="39.0" prefWidth="88.0" text="stop" textFill="#130a70" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                  <Button mnemonicParsing="false" onAction="#onSave" prefHeight="39.0" prefWidth="88.0" text="start" textFill="#130a70" GridPane.columnIndex="1" GridPane.rowIndex="3">
                      <effect>
                         <ColorAdjust />
                      </effect>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#onSave" prefHeight="39.0" prefWidth="88.0" text="Save" textFill="#130a70" GridPane.rowIndex="3">
-                     <effect>
-                        <ColorAdjust />
-                     </effect>
-                  </Button>
-
                </children>
                <opaqueInsets>
                   <Insets />
